--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <p style> Jacob Hoffman is a D.C. resident who in 2016, competed at New Balance Nationals
                                 Indoor in the long sprints [200m, 400m]. In 2020, Jacob Hoffman graduated from Carnegie
                                 Mellon University where he put track and field aside to work on his specialty as a <a
-                                    href="https://jacobhoffman.tk">software engineer</a>. Jacob moved to Washington D.C.
+                                    href="https://jacobhoffman.xyz">software engineer</a>. Jacob moved to Washington D.C.
                                 where he works on AI/ML for the government, and trains in the long sprints at the
                                 Gallaudet University Track.</p>
                             <p>
@@ -137,24 +137,24 @@
             <!-- Example row of columns -->
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <img src="assets/images/jacob.jpg">
-                <a href="https://jacobhoffman.tk">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
+                <a href="https://jacobhoffman.xyz">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
             </div>
             <!--
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <img src="assets/images/jacob.jpg">
-                <a href="https://jacobhoffman.tk">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
+                <a href="https://jacobhoffman.xyz">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <img src="assets/images/jacob.jpg">
-                <a href="https://jacobhoffman.tk">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
+                <a href="https://jacobhoffman.xyz">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <img src="assets/images/jacob.jpg">
-                <a href="https://jacobhoffman.tk">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
+                <a href="https://jacobhoffman.xyz">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <img src="assets/images/jacob.jpg">
-                <a href="https://jacobhoffman.tk">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
+                <a href="https://jacobhoffman.xyz">Jacob Hoffman</a><br>35.16 Indoor FAT 300m <br></br>
             </div>
             -->
         </div>
